--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<?import javafx.scene.control.Accordion?>
-<GridPane alignment="center" gridLinesVisible="true" hgap="1.0" prefHeight="600.0" prefWidth="800.0" vgap="1.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.antra.tools.ui.Controller">
+<GridPane alignment="center" gridLinesVisible="false" hgap="1.0" prefHeight="600.0" prefWidth="800.0" vgap="1.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.antra.tools.ui.Controller">
    <rowConstraints>
       <RowConstraints maxHeight="295.0" minHeight="125.0" prefHeight="136.0" vgrow="NEVER" />
-      <RowConstraints minHeight="304.0" prefHeight="463.0" vgrow="ALWAYS" />
+      <RowConstraints minHeight="100.0" prefHeight="463.0" vgrow="ALWAYS" />
+       <RowConstraints minHeight="20.0" prefHeight="20.0" vgrow="NEVER" />
+
    </rowConstraints>
    <columnConstraints>
       <ColumnConstraints hgrow="ALWAYS" prefWidth="100.0" />
@@ -54,13 +56,17 @@
                   <Insets left="10.0" />
                </GridPane.margin></Button>
             <CheckBox fx:id="csChkBox" mnemonicParsing="false" text="Case Sensitive" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <ProgressIndicator fx:id="progressInd" progress="0.0" visible="false" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <ProgressIndicator fx:id="progressInd" progress="0.0" visible="false" GridPane.columnIndex="3" GridPane.rowIndex="1" GridPane.rowSpan="2" />
          </children>
       </GridPane>
        <ScrollPane GridPane.rowIndex="1">
+
           <Accordion fx:id="dataPane">
 
           </Accordion>
        </ScrollPane>
+       <HBox GridPane.rowIndex="2">
+           <Label fx:id="btmStatus"><padding><Insets left="10.0" /></padding></Label>
+       </HBox>
    </children>
 </GridPane>
