--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -5,6 +5,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
@@ -15,16 +18,17 @@
 
 <GridPane alignment="center" gridLinesVisible="false" hgap="1.0" prefHeight="600.0" prefWidth="800.0" vgap="1.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.antra.tools.ui.Controller">
    <rowConstraints>
+      <RowConstraints />
       <RowConstraints maxHeight="295.0" minHeight="125.0" prefHeight="136.0" vgrow="NEVER" />
-      <RowConstraints minHeight="100.0" prefHeight="463.0" vgrow="ALWAYS" />
-       <RowConstraints minHeight="20.0" prefHeight="20.0" vgrow="NEVER" />
+       <RowConstraints minHeight="100.0" prefHeight="463.0" vgrow="ALWAYS" />
+      <RowConstraints minHeight="20.0" prefHeight="20.0" vgrow="NEVER" />
 
    </rowConstraints>
    <columnConstraints>
       <ColumnConstraints hgrow="ALWAYS" prefWidth="100.0" />
    </columnConstraints>
    <children>
-      <GridPane fx:id="searchArea">
+      <GridPane fx:id="searchArea" GridPane.rowIndex="1">
         <columnConstraints>
           <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="394.0" minWidth="10.0" prefWidth="148.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="640.0" minWidth="10.0" prefWidth="163.0" />
@@ -59,14 +63,23 @@
             <ProgressIndicator fx:id="progressInd" progress="0.0" visible="false" GridPane.columnIndex="3" GridPane.rowIndex="1" GridPane.rowSpan="2" />
          </children>
       </GridPane>
-       <ScrollPane GridPane.rowIndex="1">
+       <ScrollPane GridPane.rowIndex="2">
 
           <Accordion fx:id="dataPane">
 
           </Accordion>
        </ScrollPane>
-       <HBox GridPane.rowIndex="2">
+       <HBox GridPane.rowIndex="3">
            <Label fx:id="btmStatus"><padding><Insets left="10.0" /></padding></Label>
        </HBox>
+      <MenuBar useSystemMenuBar="true">
+        <menus>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" fx:id="aboutMenu"/>
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
    </children>
 </GridPane>
