--- a/src/main/resources/mainRT.fxml
+++ b/src/main/resources/mainRT.fxml
@@ -5,6 +5,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
@@ -13,9 +16,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuItem?>
 <GridPane alignment="center" gridLinesVisible="false" hgap="1.0" prefHeight="600.0" prefWidth="800.0" vgap="1.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.antra.tools.realtime.Controller">
    <rowConstraints>
       <RowConstraints maxHeight="295.0" minHeight="125.0" prefHeight="136.0" vgrow="NEVER" />
@@ -27,10 +27,19 @@
       <ColumnConstraints hgrow="ALWAYS" prefWidth="100.0" />
    </columnConstraints>
    <children>
+       <MenuBar useSystemMenuBar="true">
+           <menus>
+               <Menu mnemonicParsing="false" text="Help">
+                   <items>
+                       <MenuItem fx:id="aboutMenu" mnemonicParsing="false" text="About" />
+                   </items>
+               </Menu>
+           </menus>
+       </MenuBar>
       <GridPane fx:id="searchArea">
         <columnConstraints>
           <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="394.0" minWidth="10.0" prefWidth="148.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="640.0" minWidth="10.0" prefWidth="163.0" />
+          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="640.0" minWidth="10.0" prefWidth="163.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="640.0" minWidth="10.0" prefWidth="342.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="640.0" minWidth="10.0" prefWidth="164.0" />
         </columnConstraints>
@@ -58,8 +67,17 @@
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin></Button>
-            <CheckBox fx:id="csChkBox" mnemonicParsing="false" text="Case Sensitive" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+             <Button fx:id="cancelBtn" mnemonicParsing="false" text="Cancel" GridPane.columnIndex="2" GridPane.rowIndex="1" visible="false">
+                 <GridPane.margin>
+                     <Insets left="60.0" />
+                 </GridPane.margin>
+             </Button>
+             <CheckBox fx:id="csChkBox" mnemonicParsing="false" text="Case Sensitive" GridPane.rowIndex="2" />
             <ProgressIndicator fx:id="progressInd" progress="0.0" visible="false" GridPane.columnIndex="3" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+             <Label text="File Type" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                 <padding>
+                     <Insets right="10.0" />
+                 </padding></Label>
          </children>
       </GridPane>
        <ScrollPane GridPane.rowIndex="1">
@@ -71,14 +89,5 @@
        <HBox GridPane.rowIndex="2">
            <Label fx:id="btmStatus"><padding><Insets left="10.0" /></padding></Label>
        </HBox>
-       <MenuBar useSystemMenuBar="true">
-           <menus>
-               <Menu mnemonicParsing="false" text="Help">
-                   <items>
-                       <MenuItem mnemonicParsing="false" text="About" fx:id="aboutMenu"/>
-                   </items>
-               </Menu>
-           </menus>
-       </MenuBar>
    </children>
 </GridPane>
